fix / page layout

--- a/css/body/body.css
+++ b/css/body/body.css
@@ -14,7 +14,11 @@ body {
   color: #ECECEC;
   background-color: #111114;
   position: relative;
-  padding: 52px 40px 20px 360px;
+}
+
+.content {
+  margin-left: 314px;
+  padding: 80px;
 }
 
 /* SCROLLBAR */
