--- a/css/body/body.css
+++ b/css/body/body.css
@@ -7,6 +7,7 @@
 html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
+  width: 100%;
 }
 
 body {
@@ -14,11 +15,6 @@ body {
   color: #ECECEC;
   background-color: #111114;
   position: relative;
-}
-
-.content {
-  margin-left: 314px;
-  padding: 52px 112px 80px 112px;
 }
 
 /* SCROLLBAR */
