--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url("body/body.css");
 
-@import url("sections/sidenav.css");
+@import url("sections/navbar.css");
+@import url("sections/content.css");
 @import url("sections/index.css");
 @import url("sections/footer.css");
 @import url("sections/contact.css");
