--- a/css/sections/index.css
+++ b/css/sections/index.css
@@ -1,4 +1,31 @@
+/* THIS IS ABOUT.HTML */
+
 .content h1 {
   font-size: 40px;
+  line-height: 140%;
   font-weight: 600;
+  color: var(--neutral-400);
+  margin-bottom: 48px;
+}
+
+.content p {
+  line-height: 160%;
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.content-music {
+  display: flex;
+  flex-direction: column;
+  margin-top: 160px;
+  margin-bottom: 80px;
+}
+
+.content-music p {
+  margin-bottom: 32px;
+}
+
+.spotify {
+  border: 1px solid var(--neutral-000);
+  border-radius: 13px;
 }
