--- a/css/sections/navbar.css
+++ b/css/sections/navbar.css
@@ -1,9 +1,10 @@
+/* THIS IS THE NAVBAR */
+
 .navbar {
   position: fixed;
   height: fill;
-  width: fit-content;
-  min-width: 298px;
-  z-index: 1;
+  width: auto;
+  z-index: 100;
   overflow-x: hidden;
   overflow-y: auto;
   top: 20px;
@@ -38,7 +39,7 @@
 }
 
 .navbar-title-text p {
-  color: var(--neutral-600);
+  color: var(--neutral-400);
   font-size: 16px
 }
 
@@ -62,7 +63,6 @@ ul {
 .navbar a {  
   display: flex;
   align-items: center;
-  text-decoration: none;
   font-size: 16px;
   font-weight: 400;
   color: var(--neutral-000);
@@ -112,14 +112,14 @@ ul {
 @media screen and (max-width: 849px) {
 
   .navbar {
+    width: fill;
     overflow-x: hidden;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     height: fit-content;
-    width: 100%;
-    bottom: 0px;
+    bottom: 0;
     left: 16px; 
     padding: 16px;
     border-radius: 32px;
