--- a/css/global.css
+++ b/css/global.css
@@ -15,14 +15,20 @@ html, body {
 
 body {
   font-family: 'Inter', sans-serif;
-  color: #ECECEC;
-  background-color: #111114;
+  color: var(--neutral-300);;
+  background-color: var(--neutral-900);
   position: relative;
 }
 
 a {
   cursor: pointer;
   text-decoration: none;
+}
+
+p {
+  line-height: 160%;
+  font-size: 20px;
+  font-weight: 400;
 }
 
 /* SCROLLBAR */
