--- a/css/sections/footer.css
+++ b/css/sections/footer.css
@@ -4,6 +4,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: baseline;
+  padding-top: 20px;
+  border-top: 1px solid var(--neutral-700);
 }
 
 .footer span {
@@ -13,17 +16,19 @@
   justify-content: flex-start;
 }
 
-.footer p, .footer a {
-  font-size: 12px;
+.footer span p, .footer span a {
+  font-size: 14px;
+  line-height: auto;
   color: var(--neutral-400);
 }
 
-.footer p {
+.footer span p {
   margin-right: 4px;
 }
 
-.footer a {
+.footer span a {
   margin-right: 2px;
+  color: var(--neutral-400);
 }
 
 .footer a:hover {
@@ -33,5 +38,12 @@
 .footer img {
   height: 14px;
   width: 14px;
+}
+
+.footer p {
+  font-size: 14px;
+  text-align: right;
+  line-height: auto;
+  color: var(--neutral-400);
 }
 
