--- a/css/sections/index.css
+++ b/css/sections/index.css
@@ -1,24 +1,22 @@
 /* THIS IS ABOUT.HTML */
 
 .content h1 {
-  font-size: 40px;
+  font-size: 48px;
   line-height: 140%;
   font-weight: 600;
   color: var(--neutral-400);
   margin-bottom: 48px;
 }
 
-.content p {
-  line-height: 160%;
-  font-weight: 400;
-  font-size: 20px;
+.content-index-1 p{
+  margin-bottom: 24px;
 }
 
 .content-music {
   display: flex;
   flex-direction: column;
   margin-top: 160px;
-  margin-bottom: 80px;
+  margin-bottom: 120px;
 }
 
 .content-music p {
@@ -26,6 +24,8 @@
 }
 
 .spotify {
-  border: 1px solid var(--neutral-000);
-  border-radius: 13px;
+  border: 1px solid var(--neutral-700);
+  border-radius: 24px;
+  padding: 24px;
+  background-color: var(--neutral-800);
 }
