--- a/css/sections/index.css
+++ b/css/sections/index.css
@@ -23,8 +23,43 @@
 
 .keyword {
   padding: 1px 4px;
-  border-radius: 8px;
+  border-radius: 6px;
   font-weight: 400;
+  background-color: #0a92f3ad;
+}
+
+.timeline {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--neutral-800);
+  border: 1px solid var(--neutral-700);
+  border-radius: 24px;
+  padding: 40px 32px;
+  margin-bottom: 48px;
+}
+
+.timeline-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.timeline-year {
+  line-height: 100%;
+  font-weight: 900;
+  color: var(--neutral-800);
+  padding: 8px 12px;
+  background-color: var(--neutral-000);
+  border-radius: 100px;
+  font-size: 16px;
+  font-family: 'Roboto Mono', monospace;
+}
+
+.timeline-text {
+  text-align: center;
 }
 
 .spotify {
