--- a/css/sections/index.css
+++ b/css/sections/index.css
@@ -25,7 +25,7 @@
   padding: 1px 4px;
   border-radius: 6px;
   font-weight: 400;
-  background-color: #0a92f3ad;
+  background-color: var(--neutral-700);
 }
 
 .timeline {
@@ -36,15 +36,19 @@
   background-color: var(--neutral-800);
   border: 1px solid var(--neutral-700);
   border-radius: 24px;
-  padding: 40px 32px;
+  padding: 40px 32px 20px 40px;
   margin-bottom: 48px;
 }
 
-.timeline-section{
+.timeline-section {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.timeline .timeline-section:not(:last-of-type) {
+  margin-bottom: 32px;
 }
 
 .timeline-year {
@@ -56,10 +60,12 @@
   border-radius: 100px;
   font-size: 16px;
   font-family: 'Roboto Mono', monospace;
+  margin-bottom: 12px !important;
 }
 
 .timeline-text {
   text-align: center;
+  margin-bottom: 12px !important;
 }
 
 .spotify {
