--- a/css/sections/index.css
+++ b/css/sections/index.css
@@ -33,17 +33,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: var(--neutral-800);
-  border: 1px solid var(--neutral-700);
-  border-radius: 24px;
-  padding: 40px 32px 20px 40px;
   margin-bottom: 48px;
 }
 
 .timeline-section {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -53,19 +49,20 @@
 
 .timeline-year {
   line-height: 100%;
-  font-weight: 900;
-  color: var(--neutral-800);
-  padding: 8px 12px;
-  background-color: var(--neutral-000);
-  border-radius: 100px;
-  font-size: 16px;
-  font-family: 'Roboto Mono', monospace;
-  margin-bottom: 12px !important;
+  font-weight: 800;
+  color: var(--neutral-600);
+  font-size: 32px;
+  margin-right: 40px;
+  margin-bottom: 0 !important;
 }
 
 .timeline-text {
-  text-align: center;
-  margin-bottom: 12px !important;
+  text-align: left;
+  margin-bottom: 0 !important;
+  padding: 8px 16px;
+  border: 1px solid var(--neutral-700);
+  border-radius: 24px;
+  background-color: var(--neutral-800);
 }
 
 .spotify {
