--- a/css/sections/index.css
+++ b/css/sections/index.css
@@ -29,6 +29,7 @@
 }
 
 .timeline {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,12 +49,31 @@
 }
 
 .timeline-year {
+  position: relative;
+  margin-right: 40px;
+}
+
+.timeline-year p {
   line-height: 100%;
   font-weight: 800;
-  color: var(--neutral-600);
+  color: var(--neutral-400);
   font-size: 32px;
-  margin-right: 40px;
   margin-bottom: 0 !important;
+}
+
+.timeline-circle {
+  position: absolute; 
+  height: 60px;
+  width: 60px;
+  z-index: -10;
+  top: -14px;
+  left: 11px;
+}
+
+.timeline-line {
+  position: absolute;
+  z-index: -11;
+  left: 40px;
 }
 
 .timeline-text {
