--- a/css/sections/footer.css
+++ b/css/sections/footer.css
@@ -51,3 +51,20 @@
   color: var(--neutral-400);
 }
 
+/* BREAKPOINTS */
+
+/* 0-849 */
+
+@media screen and (max-width: 849px) {
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer span {
+    margin-bottom: 8px;
+  }
+}
