--- a/css/sections/navbar.css
+++ b/css/sections/navbar.css
@@ -111,21 +111,21 @@ ul {
 
 /* BREAKPOINTS */
 
-/* 0-849 */
-
 @media screen and (max-width: 849px) {
 
   .navbar {
-    width: calc(100% - 32px);
     overflow-x: hidden;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: fit-content; 
+    height: fit-content;     
+    width: auto;
     padding: 16px;
     border-radius: 32px;
-    transform: translateY(calc(95vh - 100%)); /* Sposta la navbar verso il fondo */
+    transform: translateY(calc(95vh - 100%));
+    left: 50%;
+    transform: translatex(-50%);
   }  
   
   .navbar-title {
@@ -213,14 +213,14 @@ ul {
   }
 }
 
-/* 0-849 */
 @media screen and (max-width: 449px) {
 
   .navbar {
     justify-content: center;
+    border-radius: 24px;
   }
 
-  .navbar-title-picture,
+  .navbar-title,
   .navbar-link-2 {
     display: none;
   }  
