--- a/css/sections/footer.css
+++ b/css/sections/footer.css
@@ -40,8 +40,8 @@
 }
 
 .footer img {
-  height: 14px;
-  width: 14px;
+  height: 16px;
+  width: 16px;
 }
 
 .footer p {
@@ -65,6 +65,37 @@
   }
 
   .footer span {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+
+  .footer span p,
+  .footer span a {
+    font-size: 16px;
+  }
+
+  .footer span a {
+    text-decoration: underline;
+  }
+
+  .footer span p:first-of-type {
     margin-bottom: 8px;
   }
+
+  .footer-slash {
+    display: none;
+  }
+
+  .footer span a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .footer span a img:first-of-type {
+    margin-right: 8px;
+  }
+
 }
