--- a/css/sections/content.css
+++ b/css/sections/content.css
@@ -2,7 +2,7 @@
 
 .content {
   margin-left: 309px;
-  padding: 48px 160px 20px 160px; /* 1440+ */
+  padding: 48px 160px 20px 160px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +16,6 @@
 
 /* BREAKPOINTS */
 
-/* 1160-1399 */
 @media screen and (max-width: 1399px) {       
 
   .content {
@@ -25,7 +24,6 @@
 
 }
 
-/* 1100-1199 */
 @media screen and (max-width: 1199px) {         
 
   .content {
@@ -34,7 +32,6 @@
 
 }
 
-/* 850-1099 */
 @media screen and (max-width: 1099px) {
 
   .content {
