--- a/css/sections/content.css
+++ b/css/sections/content.css
@@ -19,22 +19,29 @@
 @media screen and (max-width: 1440px) {       
 
   .content {
-    padding: 48px 112px 20px 112px;
+    padding: 48px 80px 20px 80px;
   }
 
 }
 
-@media screen and (max-width: 1099px) {
+@media screen and (max-width: 1100px) {
 
   .content {
     padding: 48px 40px 20px 40px;
   }
 }
 
-@media screen and (max-width: 849px) {
+@media screen and (max-width: 850px) {
 
   .content {
     margin-left: 0px;
-    padding: 40px 20px 120px 20px;
+    padding: 40px 40px 120px 40px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+
+  .content {
+    padding: 40px 20px 140px 20px;
   }
 }
