--- a/css/sections/footer.css
+++ b/css/sections/footer.css
@@ -53,22 +53,21 @@
 
 /* BREAKPOINTS */
 
-/* 0-849 */
-
-@media screen and (max-width: 849px) {
+@media screen and (max-width: 850px) {
 
   .footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    padding-top: 48px;
   }
 
   .footer span {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 16px;
+    margin-bottom: 24px;
   }
 
   .footer span p,
@@ -96,6 +95,10 @@
 
   .footer span a img:first-of-type {
     margin-right: 8px;
+  }
+
+  .footer p:last-of-type {
+    font-size: 12px;
   }
 
 }
