--- a/css/sections/footer.css
+++ b/css/sections/footer.css
@@ -1,6 +1,7 @@
 /* THIS IS THE FOOTER */
 
-.footer {
+footer {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -9,42 +10,42 @@
   border-top: 1px solid var(--neutral-700);
 }
 
-.footer p {
+footer p {
   margin-bottom: 0px;
 }
 
-.footer span {
+footer span {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
 }
 
-.footer span p, .footer span a {
+footer span p, footer span a {
   font-size: 14px;
   line-height: auto;
   color: var(--neutral-400);
 }
 
-.footer span p {
+footer span p {
   margin-right: 4px;
 }
 
-.footer span a {
+footer span a {
   margin-right: 2px;
   color: var(--neutral-400);
 }
 
-.footer a:hover {
+footer a:hover {
   color: var(--neutral-000);
 }
 
-.footer img {
+footer img {
   height: 16px;
   width: 16px;
 }
 
-.footer p {
+footer p {
   font-size: 14px;
   text-align: right;
   line-height: auto;
@@ -55,7 +56,7 @@
 
 @media screen and (max-width: 850px) {
 
-  .footer {
+  footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -63,23 +64,23 @@
     padding-top: 48px;
   }
 
-  .footer span {
+  footer span {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 24px;
   }
 
-  .footer span p,
-  .footer span a {
+  footer span p,
+  footer span a {
     font-size: 16px;
   }
 
-  .footer span a {
+  footer span a {
     text-decoration: underline;
   }
 
-  .footer span p:first-of-type {
+  footer span p:first-of-type {
     margin-bottom: 8px;
   }
 
@@ -87,17 +88,17 @@
     display: none;
   }
 
-  .footer span a {
+  footer span a {
     display: flex;
     flex-direction: row;
     align-items: center;
   }
 
-  .footer span a img:first-of-type {
+  footer span a img:first-of-type {
     margin-right: 8px;
   }
 
-  .footer p:last-of-type {
+  footer p:last-of-type {
     font-size: 12px;
   }
 
