--- a/css/sections/navbar.css
+++ b/css/sections/navbar.css
@@ -51,12 +51,18 @@ ul {
 }
 
 .navbar-link-1 {
-  padding-bottom: 32px;
+  padding-bottom: 20px;
   border-bottom: 1px solid var(--neutral-700);
 }
 
 .navbar-link-2 {
-  padding-top: 32px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.navbar-link-3 {
+  padding-top: 20px;
+  border-top: 1px solid var(--neutral-700);
 }
 
 .navbar li:not(:last-of-type) {
@@ -76,6 +82,10 @@ ul {
 }
 
 .navbar-link-2 a {
+  padding: 12px 8px 12px 12px;
+}
+
+.navbar-link-3 a {
   padding: 12px 8px 12px 12px;
 }
 
