--- a/css/global.css
+++ b/css/global.css
@@ -15,7 +15,7 @@ html, body {
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Geist', sans-serif;
   color: var(--neutral-000);;
   background-color: var(--neutral-900);
   position: relative;
