--- a/css/sections/footer.css
+++ b/css/sections/footer.css
@@ -7,11 +7,10 @@ footer {
   justify-content: space-between;
   align-items: baseline;
   padding-top: 20px;
-  border-top: 1px solid var(--neutral-700);
-}
-
-footer p {
-  margin-bottom: 0px;
+  border-top: 1px solid var(--neutral-400);
+  font-size: 14px;
+  line-height: auto;
+  color: var(--neutral-200);
 }
 
 footer span {
@@ -21,19 +20,24 @@ footer span {
   justify-content: flex-start;
 }
 
-footer span p, footer span a {
+footer p {
+  margin-bottom: 0px;
+  font-weight: 400;
   font-size: 14px;
+  text-align: right;
   line-height: auto;
-  color: var(--neutral-400);
+  color: var(--neutral-200);
 }
 
 footer span p {
-  margin-right: 4px;
+  margin-right: 6px;
 }
 
 footer span a {
-  margin-right: 2px;
-  color: var(--neutral-400);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: var(--neutral-200);
 }
 
 footer a:hover {
@@ -43,13 +47,11 @@ footer a:hover {
 footer img {
   height: 16px;
   width: 16px;
+  margin-right: 6px;
 }
 
-footer p {
-  font-size: 14px;
-  text-align: right;
-  line-height: auto;
-  color: var(--neutral-400);
+.footer-slash {
+  margin-right: 6px;
 }
 
 /* BREAKPOINTS */
