--- a/css/sections/index.css
+++ b/css/sections/index.css
@@ -13,11 +13,11 @@
 .content-index p  {
   margin-bottom: 32px;
   color: var(--neutral-100);
-  line-height: 170%;
 }
 
 .guidingtext {
   font-family: 'Roboto Mono', monospace;
+  font-weight: 300;
 }
 
 .quote {
@@ -34,8 +34,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   margin-bottom: 48px;
 }
 
@@ -43,55 +43,23 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .timeline .timeline-section:not(:last-of-type) {
   margin-bottom: 32px;
 }
 
-.timeline-year {
-  position: relative;
-  margin-right: 40px;
-}
-
-.timeline-year p {
-  line-height: 100%;
-  font-weight: 800;
-  color: var(--neutral-400);
-  font-size: 32px;
-  margin-bottom: 0 !important;
-}
-
-.timeline-circle {
-  position: absolute; 
-  height: 60px;
-  width: 60px;
-  z-index: -10;
-  top: -14px;
-  left: 11px;
-}
-
-.timeline-line {
-  position: absolute;
-  z-index: -11;
-  left: 40px;
-}
-
 .timeline-text {
   text-align: left;
   margin-bottom: 0 !important;
-  padding: 8px 16px;
-  border: 1px solid var(--neutral-700);
-  border-radius: 24px;
-  background-color: var(--neutral-800);
 }
 
 .spotify {
-  border: 1px solid var(--neutral-700);
+  border: 1px solid var(--neutral-400);
   border-radius: 24px;
   padding: 24px;
-  background-color: var(--neutral-800);
+  background-color: var(--neutral-600);
   margin-bottom: 48px;
 }
 
