--- a/css/sections/navbar.css
+++ b/css/sections/navbar.css
@@ -7,9 +7,9 @@
   z-index: 100;
   overflow-x: hidden;
   overflow-y: auto;
-  top: 20px;
-  left: 16px;
-  bottom: 20px;
+  top: 12px;
+  left: 8px;
+  bottom: 12px;
   background-color: var(--neutral-600);
   border-radius: 24px;
   border: 1px solid var(--neutral-400);
@@ -123,7 +123,7 @@ ul {
 @media screen and (max-width: 849px) {
 
   .navbar {
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
